// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MusicBox 1`] = `
.c0 {
  font-family: 'DM-sans',sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 101vh;
  margin-top: 20px;
}

<div
  className="c0"
/>
`;

exports[`MusicPlayer 1`] = `
.c0 {
  position: relative;
  width: 320px;
  height: 620px;
  border-radius: 30px;
  box-shadow: 0px 0px 7px 1px rgba(40,42,13,0.12);
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #f6f6f6;
  background-image: linear-gradient(315deg,#f6f6f6 0%,#e9e9e9 74%);
  border: solid 1px #f6f6f6;
}

<div
  className="c0"
/>
`;

exports[`PlayTitle 1`] = `
.c0 {
  padding: 0px 20px 6px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #626262;
  font-size: 18px;
  font-weight: bold;
  padding: 30px 20px 0 20px;
  text-shadow: 0px 0px 3px rgba(255,255,255,1);
}

<div
  className="c0"
/>
`;

exports[`Queue 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
  height: calc(100% - 32px);
}

<div
  className="c0"
/>
`;
